feat: ユーザーと本の登録処理のスキーマを作った
